# mcp-guide

./: .coveragerc  .dockerignore  .envrc  .gitignore  .guide.yaml  .openspec-validate.txt  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEBUGGING.md  INSTRUCTIONS.md  README.md  mkdocs.yml  package-lock.json  pyproject.toml  qodana.yaml  tool-descriptions-review.md  versions.json  vulture_whitelist.py
.codex/knowledge/: CODEREVIEW.md  GUIDELINES.md
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/workflows/: codeql.yml  python-mcp-docs.yml  python-mcp-publish.yml  python-mcp-test.yml  qodana_code_quality.yml
0.9.0/: 404.html  index.html  sitemap.xml
1.0.0/: 404.html  index.html  sitemap.xml
1.0.0b1/: 404.html  index.html  sitemap.xml
1.0.0b1/search/: search_index.json
1.0.0b2/: 404.html  index.html  sitemap.xml
1.0.0b3/: 404.html  index.html  sitemap.xml
1.0.0b4/: 404.html  index.html  sitemap.xml
1.0.0b4/search/: search_index.json
1.0.0b5/: 404.html  index.html  sitemap.xml
1.0.0rc1/: 404.html  index.html  sitemap.xml
1.0.0rc1/search/: search_index.json
1.0.0rc2/: 404.html  index.html  sitemap.xml
1.0.0rc3/: 404.html  index.html  sitemap.xml
1.0.0rc3/search/: search_index.json
1.1.0/: 404.html  index.html  sitemap.xml
1.1.0b1/: 404.html  index.html  sitemap.xml
1.1.0b1/search/: search_index.json
1.2.0/: 404.html  index.html  sitemap.xml
1.2.0a1/: 404.html  index.html  sitemap.xml
1.2.0rc1/: 404.html  index.html  sitemap.xml
1.2.0rc2/: 404.html  index.html  sitemap.xml
1.2.0rc2/search/: search_index.json
1.2.0rc3/: 404.html  index.html  sitemap.xml
1.2.0rc3/search/: search_index.json
1.2.1/: 404.html  index.html  sitemap.xml
1.2.1/search/: search_index.json
1.2.2/: 404.html  index.html  sitemap.xml
1.3.0/: 404.html  index.html  sitemap.xml
1.3.1/: 404.html  index.html  sitemap.xml
1.3.2/: 404.html  index.html  sitemap.xml
docker/: .env.example  .gitignore  Dockerfile  Dockerfile.http  Dockerfile.https  Dockerfile.stdio  README.md  compose.yaml  entrypoint-http-nossl.sh  entrypoint-https.sh  entrypoint-stdio.sh  generate-certs.sh
docs/: command-authoring.md  content-tools.md  document-templates.md  filesystem-access.md  frontmatter-instruction-handling.md  index.md  testing-tools.md  tool-implementation.md
docs/developer/: DEBUGGING.md  SETUP.md  command-authoring.md  filesystem-access.md  template-rendering.md
docs/mcp_core/: logging.md
docs/user/: INDEX.md  categories-and-collections.md  commands.md  content-documents.md  content-management.md  documents.md  feature-flags.md  getting-started.md  guide-uris.md  installation.md  openspec.md  policies.md  profiles.md  stored-documents.md  workflows.md
openspec/: config.yaml  project.md
openspec/adr/: 001-tool-naming-convention.md  002-mcp-server-framework.md  003-result-pattern-error-handling.md  003-result-pattern-response.md  004-logging-architecture.md  005-mcp-inspector-integration-testing.md  005-tool-definition-conventions.md  006-session-management-architecture.md  007-mcp-sdk-client-testing.md  008-tool-definition-conventions.md  009-client-project-name-detection.md  010-concise-tool-descriptions.md  INDEX.md  passing-template-arguments-to-tools.md
openspec/changes/: IMPLEMENTATION_ORDER.md  ROADMAP.md  config-file-watch.md
openspec/ideas/: agent-server-filesystem-interaction.md  command_prompt_system_plan.md  command_system_tdd_checklist.md  config-file-watch.md  config-manager-privacy.md  deferred-tool-registration.md  feature-flags.md  front-matter-metadata.md  guided-workflow-state-tracking.md  project-hash.md  transport-modes.md  user-defined-workflows.md
src/: osvcheck.py
src/mcp_core/: __init__.py  arguments.py  file_reader.py  mcp_log.py  mcp_log_filter.py  path_security.py  path_watcher.py  prompt_decorator.py  result.py  result_handler.py  tool_arguments.py  tool_decorator.py  validation.py  watcher_registry.py
src/mcp_guide/: __init__.py  agent_detection.py  cli.py  config.py  config_constants.py  config_paths.py  constants.py  decorators.py  file_lock.py  guide.py  guide_uri_listener.py  lazy_path.py  main.py  mcp_context.py  models.py  resources.py  response_processor.py  result.py  result_constants.py  server.py  session.py  session_listener.py  startup.py  startup_listener.py  types.py  uri_parser.py  validation.py
src/scripts/: guide_agent_install.py  osvcheck.py
templates/_commands/: fs.mustache  help.mustache  info.mustache  list.mustache  perm.mustache  review.mustache  status.mustache
templates/_common/: client-context-detailed.mustache  client-context-setup.md.mustache  openspec-cli-check.md.mustache  openspec-project-check.md.mustache  openspec-version-check.md.mustache
templates/_prompts/: check.md.mustache  discuss.md.mustache  implement.mustache
templates/_workflow/: 01-discussion.mustache  02-planning.mustache  03-implementation.mustache  (+8 more)
tests/: conftest.py  helpers.py  test_command_discovery.py  test_command_parser.py  test_command_security.py  test_command_templates.py  test_config.py  test_config_migration.py  test_content_size_mime_integration.py  test_content_tools_template_integration.py  test_data_generator.py  test_deduplicate.py  test_file_lock.py  test_file_protection.py  test_filesystem_bridge.py  test_filesystem_cache.py  test_filesystem_error_handling.py  test_filesystem_path_validator.py  test_filesystem_security.py  test_filesystem_tools.py  test_filesystem_validation.py  test_help_system.py  test_imports.py  test_integration_commands.py  test_main.py  test_models.py  test_openspec_task.py  test_partial_instruction_merging.py  test_partial_resolution_integration.py  test_read_write_security.py  test_render_content.py  test_render_template.py  test_render_template_migration.py  test_server.py  test_server_logging.py  test_session.py  test_task_init_decorator.py  test_template_context.py  test_template_context_builder.py  test_template_context_cache.py  (+5 more)
tests_integration/: conftest.py  test_category_tools.py  test_collection_tools.py
(+1892 files in other folders)
