[project]
name = "mcp-guide"
version = "1.2.0a1"
description = "MCP Server for handling guidelines, project rules and a controlled development workflow"
readme = "README.md"
license = {file = "LICENSE.md"}
authors = [{name = "David Nugent", email = "davidn@uniquode.io"}]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.1.1",
    "pydantic>=2.0",
    "anyio>=4.5",
    "pyyaml>=6.0",
    "chevron>=0.14.0",
    "click>=8.3.0",
    "uuid7>=0.1.0",
    "patch-ng>=1.19.0",
    "packaging>=24.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications",
]

[project.urls]
Homepage = "https://github.com/deeprave/mcp-guide"
Documentation = "https://deeprave.github.io/mcp-guide/"
Repository = "https://github.com/deeprave/mcp-guide"
Issues = "https://github.com/deeprave/mcp-guide/issues"

[project.optional-dependencies]
http = ["uvicorn>=0.27.0"]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mike>=2.0.0",
    "yq>=3.0.0",
]

[project.scripts]
mcp-guide = "mcp_guide.main:main"
mcp-install = "mcp_guide.scripts.mcp_guide_install:cli"
guide-agent-install = "mcp_guide.scripts.guide_agent_install:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = ["mcp_guide"]
source-exclude = [
    ".DS_Store",
    ".localized",
]
wheel-exclude = [
    ".DS_Store",
    ".localized",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["error"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/mcp_guide",
    "--cov-report=term-missing",
]
markers = [
    "e2e: marks tests as end-to-end tests",
    "slow: marks tests as slow running",
]

[tool.ruff]
src = ["src"]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["I", "F401"]  # I = isort, F401 = unused imports

[tool.ruff.lint.isort]
known-first-party = ["mcp_guide"]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.analysis]
respect-type-ignore-comments = true
allowed-unresolved-imports = ["fastmcp.**", "uuid_extensions", "debugpy", "patch_ng"]

[tool.ty.terminal]
error-on-warning = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "coverage>=7.10.7",
    "ruff>=0.13.2",
    "ty",
    "pre-commit>=4.0.0",
    "watchdog>=6.0.0",
    "bandit>=1.9.2",
    "pyright>=1.1.407",
    "osvcheck>=1.0.0b1",
    "vulture>=2.14",
]
debug = [
    "debugpy>=1.8.0",
]

[tool.vulture]
exclude = [
  "tests/",
  "src/mcp_guide/scripts/",
]
ignore_decorators = [
  "@toolfunc",
  "@tools.tool",
  "@mcp.tool",
  "@mcp.prompt",
  "@resourcefunc",
  "@promptfunc",
  "@task_init",
  "@field_validator",
]

min_confidence = 60
